--- a/VRChat/65/1085365.html
+++ b/VRChat/65/1085365.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pE/Oc87iUntdoEmMl5CeHu3lfhm9wLIUVeqOsk9XJB8="></script>
+    "c5MyKgOOwAabey2xx/M9pOPL9LaMPb0XktR0Yvuzcus="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用立て看板","description":"立方体と円柱を組み合わせただけのよくある立て看板です。\nテクスチャを書き換えて使ってください。\n\n利用に関して制限事項はありません。\n何に使っても問題ありません。\n\n* ポリゴン数\n△136\n\n内容物\n- ボード.png\n- ボード.psd\n- 利用規約.txt\n- 立て看板.blend\n- 立て看板.fbx","url":"https://booth.pm/ja/items/1085365","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7c37f820-24f2-4f34-b3bc-377c25bf4751/i/1085365/90976a18-be48-401a-811c-9a4ee2399469_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pE/Oc87iUntdoEmMl5CeHu3lfhm9wLIUVeqOsk9XJB8="></script>
+    nonce="c5MyKgOOwAabey2xx/M9pOPL9LaMPb0XktR0Yvuzcus="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,10 +163,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1085365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              221
+                              222
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1085365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              221
+                              222
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
