--- a/VRChat/77/1084477.html
+++ b/VRChat/77/1084477.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+hX8XRLKCcqty8sprFDNb9OcPoSxuq1yqu/fWb/2eGQ="></script>
+    "zvNQ1hS80QB9c1yvFUNL9SMjytD1Y4K/1zjlLCKfhKs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベース","description":"ベースの3Dモデルがなかったので作りました！\nVRC用のローポリ版と様々な用途に使えるハイポリ版二種類用意しています。改変等は自由です！二次配布は禁止とさせていただきます。\n\n注意事項をreadmeに書いています。必ず目を通してください。\n\n追記、一部テクスチャを変更しています。テクスチャは各自で用意してください。","url":"https://booth.pm/ja/items/1084477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1084477/7de3ac94-3fa9-49ae-8fd2-5581b817d429_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+hX8XRLKCcqty8sprFDNb9OcPoSxuq1yqu/fWb/2eGQ="></script>
+    nonce="zvNQ1hS80QB9c1yvFUNL9SMjytD1Y4K/1zjlLCKfhKs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1084477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1084477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
