--- a/VRChat/88/1084488.html
+++ b/VRChat/88/1084488.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1sLPRR6gSxl+f1AX6gWzjL7K6VhOLUp7YhreQiNG3nk="></script>
+    "7BDdjvl1wyUpRDl+QfTr98yH1Yl/+oDgIoJje9WmTbs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Machine Tail","description":"今回はすこし前に尻尾のアクセサリーを作りましたので\n出来がなかなか良かったので販売することとなりました。\n\nポリ数1884\nと少しポリゴンが必要になりますが使っていただけるとありがたいです。","url":"https://booth.pm/ja/items/1084488","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1084488/37cc8145-66e3-4e1a-99cc-b48f1391802f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1sLPRR6gSxl+f1AX6gWzjL7K6VhOLUp7YhreQiNG3nk="></script>
+    nonce="7BDdjvl1wyUpRDl+QfTr98yH1Yl/+oDgIoJje9WmTbs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1084488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1084488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
