--- a/VRChat/67/1083767.html
+++ b/VRChat/67/1083767.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "72ssZlBYYLFqQDjf3mdtba8/1+0F90OBNUmMg28fgIw="></script>
+    "vb9c/LCRkrGznBnk1SEV9D5HyczbB6gf3woPlgl4cJQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"X'masセット","description":"クリスマス用アイテムのセットです。\nUnityパッケージとblendモデルが入っています。\n内容物\n・モミの木\n・クリスマスツリー\n・サンタ帽(ボーン入り)\n・プレゼント2種\n・雪だるま\nサンタ帽はポージング及びダイナミックボーン用のボーンが入っています。\n\n改変はご自由に行って大丈夫です。\n再配布は禁止させていただきます。","url":"https://booth.pm/ja/items/1083767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1083767/fd0be4a0-66d5-433a-a3eb-b3a8ba645632_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="72ssZlBYYLFqQDjf3mdtba8/1+0F90OBNUmMg28fgIw="></script>
+    nonce="vb9c/LCRkrGznBnk1SEV9D5HyczbB6gf3woPlgl4cJQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1083767/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1083767/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
